--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "smooth-scroll": "^16.1.3",
     "tailwind-merge": "^1.14.0",
     "zustand": "^4.4.1"
   },
